<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <TextView
            android:id="@+id/textView_primeiro_valor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="60sp"
            android:layout_marginEnd="4dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView_operador"
            app:layout_constraintTop_toTopOf="@+id/textView_operador"
            app:layout_constraintEnd_toStartOf="@+id/textView_operador"/>

    <TextView
            android:id="@+id/textView_operador"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="60sp"
            android:layout_marginEnd="4dp"
            app:layout_constraintTop_toTopOf="@+id/textView_segundo_valor"
            app:layout_constraintEnd_toStartOf="@+id/textView_segundo_valor"
            app:layout_constraintBottom_toBottomOf="@+id/textView_segundo_valor"/>

    <TextView
            android:id="@+id/textView_segundo_valor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="60sp"
            android:layout_marginEnd="4dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/cardView_limpar"
            android:layout_marginBottom="32dp"/>

    <TextView
            android:id="@+id/textView_resultado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="4dp"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/textView_segundo_valor"/>

    <android.support.v7.widget.CardView
            android:id="@+id/cardView_ponto"
            android:layout_width="0dp"
            android:layout_height="75dp"
            android:layout_marginBottom="4dp"
            android:layout_marginStart="4dp"
            android:onClick="onClick"
            android:backgroundTint="@color/cinza"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

        <TextView
                android:id="@+id/textView_ponto"
                android:text="@string/ponto"
                android:layout_width="94dp"
                android:textColor="@color/preto"
                android:textSize="30sp"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_height="wrap_content"/>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
            android:id="@+id/cardView_zero"
            android:layout_width="0dp"
            android:layout_height="75dp"
            android:layout_marginStart="4dp"
            android:onClick="onClick"
            android:backgroundTint="@color/cinza"
            app:layout_constraintTop_toTopOf="@+id/cardView_ponto"
            app:layout_constraintBottom_toBottomOf="@+id/cardView_ponto"
            app:layout_constraintStart_toEndOf="@+id/cardView_ponto">

        <TextView
                android:id="@+id/textView_zero"
                android:text="@string/zero"
                android:textSize="30sp"
                android:textColor="@color/preto"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_width="94dp"
                android:layout_height="wrap_content"/>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
            android:id="@+id/cardView_igualdade"
            android:layout_width="0dp"
            android:layout_height="75dp"
            android:layout_marginStart="4dp"
            android:onClick="onClick"
            android:backgroundTint="@color/cinza"
            app:layout_constraintTop_toTopOf="@+id/cardView_zero"
            app:layout_constraintBottom_toBottomOf="@+id/cardView_zero"
            app:layout_constraintStart_toEndOf="@+id/cardView_zero">

        <TextView
                android:id="@+id/textView_igualdade"
                android:layout_width="94dp"
                android:layout_height="wrap_content"
                android:text="@string/igualdade"
                android:textSize="30sp"
                android:gravity="center"
                android:layout_gravity="center"
                android:textColor="@color/preto"/>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
            android:id="@+id/cardView_um"
            android:layout_width="0dp"
            android:layout_height="75dp"
            android:layout_marginStart="4dp"
            android:layout_marginBottom="4dp"
            android:onClick="onClick"
            android:backgroundTint="@color/cinza"
            app:layout_constraintBottom_toTopOf="@+id/cardView_ponto"
            app:layout_constraintStart_toStartOf="parent">

        <TextView
                android:id="@+id/textView_um"
                android:layout_width="94dp"
                android:layout_height="wrap_content"
                android:text="@string/um"
                android:textColor="@color/preto"
                android:textSize="30sp"
                android:layout_gravity="center"
                android:gravity="center"/>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
            android:id="@+id/cardView_dois"
            android:layout_width="0dp"
            android:layout_height="75dp"
            android:layout_marginStart="4dp"
            android:onClick="onClick"
            android:backgroundTint="@color/cinza"
            app:layout_constraintTop_toTopOf="@+id/cardView_um"
            app:layout_constraintStart_toEndOf="@+id/cardView_um"
            app:layout_constraintBottom_toBottomOf="@+id/cardView_um">

        <TextView
                android:id="@+id/textView_dois"
                android:layout_width="94dp"
                android:layout_height="wrap_content"
                android:text="@string/dois"
                android:textSize="30sp"
                android:textColor="@color/preto"
                android:gravity="center"
                android:layout_gravity="center"/>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
            android:id="@+id/cardView_tres"
            android:layout_width="0dp"
            android:layout_height="75dp"
            android:layout_marginStart="4dp"
            android:backgroundTint="@color/cinza"
            android:onClick="onClick"
            app:layout_constraintTop_toTopOf="@+id/cardView_dois"
            app:layout_constraintStart_toEndOf="@+id/cardView_dois"
            app:layout_constraintBottom_toBottomOf="@+id/cardView_dois">

        <TextView
                android:id="@+id/textView_tres"
                android:text="@string/tres"
                android:layout_width="94dp"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:textColor="@color/preto"
                android:gravity="center"
                android:layout_gravity="center"/>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
            android:id="@+id/cardView_quatro"
            android:layout_width="0dp"
            android:layout_height="75dp"
            android:layout_marginStart="4dp"
            android:layout_marginBottom="4dp"
            android:onClick="onClick"
            android:backgroundTint="@color/cinza"
            app:layout_constraintBottom_toTopOf="@+id/cardView_um"
            app:layout_constraintStart_toStartOf="parent">

        <TextView
                android:id="@+id/textView_quatro"
                android:layout_width="94dp"
                android:layout_height="wrap_content"
                android:text="@string/quatro"
                android:textSize="30sp"
                android:textColor="@color/preto"
                android:gravity="center"
                android:layout_gravity="center"/>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
            android:id="@+id/cardView_cinco"
            android:layout_width="0dp"
            android:layout_height="75dp"
            android:layout_marginStart="4dp"
            android:onClick="onClick"
            android:backgroundTint="@color/cinza"
            app:layout_constraintTop_toTopOf="@+id/cardView_quatro"
            app:layout_constraintStart_toEndOf="@+id/cardView_quatro"
            app:layout_constraintBottom_toBottomOf="@+id/cardView_quatro">

        <TextView
                android:id="@+id/textView_cinco"
                android:layout_width="94dp"
                android:layout_height="wrap_content"
                android:text="@string/cinco"
                android:textSize="30sp"
                android:textColor="@color/preto"
                android:gravity="center"
                android:layout_gravity="center"/>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
            android:id="@+id/cardView_seis"
            android:layout_width="0dp"
            android:layout_height="75dp"
            android:layout_marginStart="4dp"
            android:onClick="onClick"
            android:backgroundTint="@color/cinza"
            app:layout_constraintTop_toTopOf="@+id/cardView_cinco"
            app:layout_constraintStart_toEndOf="@+id/cardView_cinco"
            app:layout_constraintBottom_toBottomOf="@+id/cardView_cinco">

        <TextView
                android:id="@+id/textView_seis"
                android:layout_width="94dp"
                android:layout_height="wrap_content"
                android:text="@string/seis"
                android:textSize="30sp"
                android:textColor="@color/preto"
                android:gravity="center"
                android:layout_gravity="center"/>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
            android:id="@+id/cardView_sete"
            android:layout_width="0dp"
            android:layout_height="75dp"
            android:layout_marginBottom="4dp"
            android:layout_marginStart="4dp"
            android:onClick="onClick"
            android:backgroundTint="@color/cinza"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/cardView_quatro">

        <TextView
                android:id="@+id/textView_sete"
                android:text="@string/sete"
                android:layout_width="94dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:textSize="30sp"
                android:textColor="@color/preto"/>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
            android:id="@+id/cardView_oito"
            android:layout_width="0dp"
            android:layout_height="75dp"
            android:layout_marginStart="4dp"
            android:onClick="onClick"
            android:backgroundTint="@color/cinza"
            app:layout_constraintTop_toTopOf="@+id/cardView_sete"
            app:layout_constraintStart_toEndOf="@+id/cardView_sete"
            app:layout_constraintBottom_toBottomOf="@+id/cardView_sete">

        <TextView
                android:id="@+id/textView_oito"
                android:text="@string/oito"
                android:layout_width="94dp"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:textColor="@color/preto"
                android:gravity="center"
                android:layout_gravity="center"/>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
            android:id="@+id/cardView_nove"
            android:layout_width="0dp"
            android:layout_height="75dp"
            android:layout_marginStart="4dp"
            android:onClick="onClick"
            android:backgroundTint="@color/cinza"
            app:layout_constraintStart_toEndOf="@+id/cardView_oito"
            app:layout_constraintTop_toTopOf="@+id/cardView_oito"
            app:layout_constraintBottom_toBottomOf="@+id/cardView_oito">

        <TextView
                android:id="@+id/textView_nove"
                android:text="@string/nove"
                android:layout_width="94dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="30sp"
                android:textColor="@color/preto"/>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
            android:id="@+id/cardView_limpar"
            android:layout_width="0dp"
            android:layout_height="58dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:onClick="onClick"
            android:backgroundTint="@color/laranja"
            app:layout_constraintStart_toEndOf="@+id/cardView_nove"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/cardView_nove"
            app:layout_constraintBottom_toTopOf="@+id/cardView_divisao"
            >

        <TextView
                android:id="@+id/textView_limpar"
                android:layout_width="97dp"
                android:layout_height="wrap_content"
                android:text="@string/limpar"
                android:textSize="30sp"
                android:gravity="center"
                android:textColor="@color/preto"
                android:layout_gravity="center"/>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
            android:id="@+id/cardView_divisao"
            android:layout_width="0dp"
            android:layout_height="58dp"
            android:layout_marginEnd="4dp"
            android:layout_marginStart="4dp"
            android:onClick="onClick"
            android:backgroundTint="@color/azul"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cardView_seis"
            app:layout_constraintTop_toBottomOf="@+id/cardView_limpar"
            app:layout_constraintBottom_toTopOf="@+id/cardView_multiplicacao"
            android:layout_marginTop="4dp">

        <TextView
                android:id="@+id/textView_divisao"
                android:layout_width="97dp"
                android:layout_height="wrap_content"
                android:text="@string/divisao"
                android:textSize="30sp"
                android:textColor="@color/preto"
                android:gravity="center"
                android:layout_gravity="center"/>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
            android:id="@+id/cardView_multiplicacao"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginEnd="4dp"
            android:layout_marginStart="4dp"
            android:onClick="onClick"
            android:backgroundTint="@color/azul"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView_divisao"
            app:layout_constraintStart_toEndOf="@+id/cardView_tres"
            app:layout_constraintBottom_toTopOf="@+id/cardView_subtracao"
            android:layout_marginTop="4dp">

        <TextView
                android:id="@+id/textView_multiplicacao"
                android:layout_width="97dp"
                android:layout_height="wrap_content"
                android:text="@string/multiplicacao"
                android:textSize="30sp"
                android:textColor="@color/preto"
                android:gravity="center"
                android:layout_gravity="center"/>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
            android:id="@+id/cardView_subtracao"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginEnd="4dp"
            android:layout_marginStart="4dp"
            android:onClick="onClick"
            android:backgroundTint="@color/azul"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cardView_igualdade"
            app:layout_constraintTop_toBottomOf="@+id/cardView_multiplicacao"
            app:layout_constraintBottom_toTopOf="@+id/cardView_adicao"
            android:layout_marginTop="4dp">

        <TextView
                android:id="@+id/textView_subtracao"
                android:layout_width="97dp"
                android:layout_height="wrap_content"
                android:text="@string/subtracao"
                android:textSize="30sp"
                android:textColor="@color/preto"
                android:gravity="center"
                android:layout_gravity="center"/>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
            android:id="@+id/cardView_adicao"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginEnd="4dp"
            android:layout_marginStart="4dp"
            android:onClick="onClick"
            android:backgroundTint="@color/azul"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cardView_igualdade"
            app:layout_constraintBottom_toBottomOf="@+id/cardView_igualdade"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/cardView_subtracao">

        <TextView
                android:id="@+id/textView_adicao"
                android:layout_width="97dp"
                android:layout_height="wrap_content"
                android:text="@string/adicao"
                android:textSize="30sp"
                android:textColor="@color/preto"
                android:gravity="center"
                android:layout_gravity="center"/>
    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>